--- a/src/uploadBundle/Resources/views/Default/header.html.twig
+++ b/src/uploadBundle/Resources/views/Default/header.html.twig
@@ -68,7 +68,7 @@ nav > li > a:focus {
         </nav>
     <div style="clear: both"></div>
 </header>
-<link href='http://fonts.googleapis.com/css?family=Bitter' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Bitter' rel='stylesheet' type='text/css'>
 <style type="text/css">
 .form-style-10{
     width:450px;
