--- a/src/uploadBundle/Resources/views/Default/header.html.twig
+++ b/src/uploadBundle/Resources/views/Default/header.html.twig
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <title>Upload Page</title>
-  <script src="{{ asset('/bundles/js/jquery.min.js') }}"></script> 
-  {#<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>#}
+  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
   <style>
 header {
     position:relative;
