--- a/src/uploadBundle/Resources/views/Default/home.html.twig
+++ b/src/uploadBundle/Resources/views/Default/home.html.twig
@@ -1,6 +1,7 @@
 {% include 'uploadBundle:Default:header.html.twig' %}
 
 {% block body %}
+    <title>Home Page</title>
     <style>
         .form-style-10{width: 60%;}
      </style>   
