--- a/src/uploadBundle/Resources/views/Default/index.html.twig
+++ b/src/uploadBundle/Resources/views/Default/index.html.twig
@@ -1,4 +1,5 @@
 {% include 'uploadBundle:Default:header.html.twig' %}
+  <title>{% block title %}Sign Up!{% endblock %}</title>
 {% block body %}
     <script type="text/javascript">
         function validateForm() {
@@ -7,6 +8,7 @@
             var fName = $("#first_name").val();
             var lName = $("#last_name").val();
             var address = $("#address").val();
+            var addresstwo = $("#addresstwo").val();
             var email = $("#email").val();
             var filechk = document.getElementById("fileinfo").files.length;
 
@@ -22,6 +24,10 @@
                 return false;
             }
             if (address == "") {
+                alert("Please enter the address");
+                return false;
+            }
+            if (addresstwo == "") {
                 alert("Please enter the address");
                 return false;
             }
@@ -94,7 +100,8 @@
             <div class="inner-wrap">
                 <label>First Name <input type="text" class=""  id="first_name" name="first_name"></label>
                 <label>Last Name <input type="text" class=""  id="last_name" name="last_name"></label>
-                <label>Address  <input type="text" class=""  id="address" name="address"></label>
+                <label>Address One <input type="text" class=""  id="address" name="address"></label>
+                <label>Address  Two<input type="text" class=""  id="addresstwo" name="addresstwo"></label>
                 <label>Email <input type="text" class=""  id="email" name="email"> </label>
                 <label>Upload File <input type="file" class=""  id="fileinfo" name="file" onchange="AlertFilesize(this.id, 100, 'KB');" ></label>
                 <label>Phone  <input type="text" class=""  id="phone" name="phone"></label>
