--- a/src/uploadBundle/Resources/views/Default/viewuser.html.twig
+++ b/src/uploadBundle/Resources/views/Default/viewuser.html.twig
@@ -31,7 +31,8 @@
             <div class="inner-wrap div-second">
                 <label class="viewrow"><span class="key">First Name     :</span><span class="value"> {{data.firstName}}</span></label>
                 <label class="viewrow"><span class="key">Last Name      :</span><span class="value">{{data.lastName}}</span></label>
-                <label class="viewrow"><span class="key">Address        :</span><span class="value">{{data.address}}</span></label>
+                <label class="viewrow"><span class="key">Address One    :</span><span class="value">{{data.address}}</span></label>
+                <label class="viewrow"><span class="key">Address Two    :</span><span class="value">{{data.addresstwo}}</span></label>
                 <label class="viewrow"><span class="key">Email          :</span><span class="value"> {{data.email}}</span></label>
                 <label class="viewrow"><span class="key">Phone  :</span> <span class="value">{{data.phone}}</span></label>
                 <label class="viewrow"><span class="key">Created Date  :</span> <span class="value">{{data.createdDate.date |date("d-M-Y")}}</span></label>
