--- a/src/uploadBundle/Resources/views/Default/header.html.twig
+++ b/src/uploadBundle/Resources/views/Default/header.html.twig
@@ -17,7 +17,7 @@
 
 
 <header>
-    <h1>Testing</h1>
+    <h1>Sample Symfony Application</h1>
         <nav>
             <ul>
                 <a href="{{path('upload_homepage')}}"><li>Home</li></a>
