Changes for UI clean ups

--- a/src/uploadBundle/Resources/public/css/common.css
+++ b/src/uploadBundle/Resources/public/css/common.css
@@ -5,7 +5,7 @@ header {
     height:100%;
     margin:0 auto;
     padding:1rem 5rem;
-    background:#2A88AD;
+    background:#2aad89;
     color:#fff;
     
 }
@@ -64,7 +64,7 @@ nav > li > a:focus {
     margin-bottom: 15px;
 }
 .form-style-10 h1{
-    background: #2A88AD;
+    background: #2aad89;
     padding: 20px 30px 15px 30px;
     margin: -30px -30px 30px -30px;
     border-radius: 10px 10px 0 0;
@@ -117,11 +117,11 @@ nav > li > a:focus {
 
 .form-style-10 .section{
     font: normal 20px 'Bitter', serif;
-    color: #2A88AD;
+    color: #2aad89;
     margin-bottom: 5px;
 }
 .form-style-10 .section span {
-    background: #2A88AD;
+    background: #2aad89;
     padding: 5px 10px 5px 10px;
     position: absolute;
     border-radius: 50%;
@@ -135,7 +135,7 @@ nav > li > a:focus {
 }
 .form-style-10 input[type="button"], 
 .form-style-10 input[type="submit"]{
-    background: #2A88AD;
+    background: #2aad89;
     padding: 8px 20px 8px 20px;
     border-radius: 5px;
     -webkit-border-radius: 5px;
