--- a/src/uploadBundle/Resources/public/css/view.css
+++ b/src/uploadBundle/Resources/public/css/view.css
@@ -84,7 +84,7 @@
             overflow: auto;
         }
         #users thead{
-           background: #2A88AD;
+           background: #2aad89;
         } 
         #users_wrapper{
             margin-top: 5%;
