--- a/src/uploadBundle/Resources/views/Default/header.html.twig
+++ b/src/uploadBundle/Resources/views/Default/header.html.twig
@@ -17,14 +17,14 @@
 
 
 <header>
-    <h1>Sample Symfony Application</h1>
+    <h1>Symfony Heroku Demo</h1>
         <nav>
             <ul>
                 <a href="{{path('upload_homepage')}}"><li>Home</li></a>
                 <a href="{{path('upload_register')}}"><li>Register</li></a>
-                <a href="{{path('upload_view')}}"><li>View User</li></a>
+                <a href="{{path('upload_view')}}"><li>List User</li></a>
                 <a href="{{path('user_note')}}"><li>Add Note</li></a>
-                 <a href="{{path('view_note')}}"><li>View Note</li></a>
+                 <a href="{{path('view_note')}}"><li>List Note</li></a>
             </ul>
         </nav>
     <div style="clear: both"></div>
