--- a/src/uploadBundle/Resources/views/Default/home.html.twig
+++ b/src/uploadBundle/Resources/views/Default/home.html.twig
@@ -1,7 +1,8 @@
 {% include 'uploadBundle:Default:header.html.twig' %}
 
 {% block body %}
-    <title>Home Page</title>
+     <title>{% block title %} Symfony Heroku Demo| Home Page{% endblock %}</title>
+   
     <style>
         .form-style-10{width: 60%;}
      </style>   
