--- a/src/uploadBundle/Resources/views/Default/index.html.twig
+++ b/src/uploadBundle/Resources/views/Default/index.html.twig
@@ -1,6 +1,23 @@
 {% include 'uploadBundle:Default:header.html.twig' %}
-  <title>{% block title %}Sign Up!{% endblock %}</title>
+  <title>{% block title %} Symfony Heroku Demo| Sign Up!{% endblock %}</title>
 {% block body %}
+    <style>
+         .previous {
+                background: #2aad89;
+               padding: 8px 20px 8px 20px;
+               border-radius: 5px;
+               -webkit-border-radius: 5px;
+               -moz-border-radius: 5px;
+               color: #fff;
+               text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.12);
+               font: normal 30px 'Bitter', serif;
+               -moz-box-shadow: inset 0px 2px 2px 0px rgba(255, 255, 255, 0.17);
+               -webkit-box-shadow: inset 0px 2px 2px 0px rgba(255, 255, 255, 0.17);
+               box-shadow: inset 0px 2px 2px 0px rgba(255, 255, 255, 0.17);
+               border: 1px solid #257C9E;
+               font-size: 15px;
+        }
+     </style>   
     <script type="text/javascript">
         function validateForm() {
 
@@ -108,7 +125,7 @@
 
             </div>
             <div class="button-section">
-               <a href="{{path('upload_view')}}">Go To View Page</a> <input type="submit" name="Sign Up" />
+               <a href="{{path('upload_view')}}" class="previous">Go To View Page</a> <input type="submit" name="Sign Up" />
             </div>
         </form>
     </div>
