--- a/src/uploadBundle/Resources/views/Default/index.html.twig
+++ b/src/uploadBundle/Resources/views/Default/index.html.twig
@@ -1,5 +1,5 @@
 {% include 'uploadBundle:Default:header.html.twig' %}
-  <title>{% block title %} Symfony Heroku Demo| Sign Up!{% endblock %}</title>
+  <title>{% block title %}Symfony Heroku Demo| Sign Up{% endblock %}</title>
 {% block body %}
     <style>
          .previous {
